Enrich get bookings data
